--- a/src/shgrid/grid/grid.component.html
+++ b/src/shgrid/grid/grid.component.html
@@ -1,4 +1,4 @@
 <div class="sh-grid">
-    <sh-grid-column *ngIf="this.hasActions"></sh-grid-column>
+    <!-- <sh-grid-column *ngIf="this.hasActions"></sh-grid-column> -->
     <ng-content></ng-content>
 </div>
