--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 .app {
   display: grid;
-  grid-template-columns: 150px auto;
+  grid-template-columns: 200px auto;
   height: 100vh;
   background-color: #f5f5f5;
 
@@ -12,5 +12,7 @@
 
   .content-container {
     grid-column: 2;
+    align-items: center;
+    justify-items: center;
   }
 }
