--- a/src/shgrid/grid-column/grid-column.component.html
+++ b/src/shgrid/grid-column/grid-column.component.html
@@ -1,4 +1,4 @@
-<div class="sh-grid-col">
+<div class="sh-grid-column">
     <div class="sh-grid-col-header sh-grid-cell">{{columnSource.header.text}}</div>
     <div class="sh-grid-cell" *ngFor="let cellInfo of columnSource.cellInfos">
         {{cellInfo.text}}
