--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,1 @@
-<div class="home">
-    <sh-view [titleText]="'Home'">
-        <sh-grid [hasActions]="true">
-            <sh-grid-column *ngFor="let col of this.columns" [columnSource]="col"></sh-grid-column>
-        </sh-grid>
-    </sh-view>
-</div>
+<div>Home</div>
