--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,6 +3,6 @@
         Sidebar !
     </div>
     <div class="sidebar-body">
-        <div *ngFor="let item of items" (click)="itemClicked(item)" class="sidebar-item" [class.selected]="item.isSelected">{{item.text}}</div>
+        <div *ngFor="let item of items" [routerLink]="item.link" (click)="itemClicked(item)" class="sidebar-item" [class.selected]="item.isSelected">{{item.text}}</div>
     </div>
 </div>
