--- a/src/app/components/profiles/edit/profile.edit.component.html
+++ b/src/app/components/profiles/edit/profile.edit.component.html
@@ -13,6 +13,9 @@
                 <div class="profession" *ngFor="let profession of profileToEdit.professions; let i = index">
                     {{i + 1}}. {{profession.name}}
                 </div>
+                <div>
+                    <sh-dropdown></sh-dropdown>
+                </div>
             </div>
         </div>
     </div>
