--- a/src/app/components/profiles/edit/profile.edit.component.html
+++ b/src/app/components/profiles/edit/profile.edit.component.html
@@ -1,25 +1,30 @@
 <div class="profile-edit" *ngIf="profileToEdit">
-    <div class="profile-info">
-        <div class="profile-image">
+    <sh-view [titleText]="profileToEdit.name">
+        <div class="profile-edit-grid">
+            <div class="profile-info">
+                <div class="profile-image">
 
-        </div>
-        <div class="profile-main-info">
-            <div class="info">
-                <span class="property">Name :  </span>
-                <input [value]="profileToEdit.name" />
-            </div>
-            <div class="professions">
-                <div class="title">Professions</div>
-                <div class="profession" *ngFor="let profession of profileToEdit.professions; let i = index">
-                    {{i + 1}}. {{profession.name}}
                 </div>
-                <div>
-                    <sh-dropdown></sh-dropdown>
+                <div class="profile-main-info">
+                    <div class="info">
+                        <span class="property">Name :  </span>
+                        <input [value]="profileToEdit.name" />
+                    </div>
+                    <div class="professions">
+                        <div class="title">Professions</div>
+                        <div class="profession" *ngFor="let profession of profileToEdit.professions; let i = index">
+                            {{i + 1}}. {{profession.name}}
+                        </div>
+                        <div>
+                           <sh-dropdown [options]="tags"></sh-dropdown>
+                            <div>test</div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="profile-secondary-info">
+            <div class="profile-secondary-info">
 
-    </div>
+            </div>
+        </div>
+    </sh-view>
 </div>
