--- a/src/app/components/view/view.component.scss
+++ b/src/app/components/view/view.component.scss
@@ -1,5 +1,6 @@
 .view {
     width: 100%;
+    height: 100%;
     display: grid;
     margin: auto;
     grid-template-rows: 150px auto;
@@ -17,8 +18,9 @@
     }
 
     .view-content {
+        margin: -15px auto 0 auto;
         width: 1200px;
         grid-row: 2;
-        margin-top: -15px;
+        height: 100%;
     }
 }
