--- a/src/app/components/view/view.component.html
+++ b/src/app/components/view/view.component.html
@@ -1,7 +1,12 @@
 
 <div class="view">
     <div class="view-header">
-        <h1>{{titleText}}</h1>
+        <div><h1>{{titleText}}</h1></div>
+        <div class="view-actions">
+            <div class="sh-btn">
+                Save
+            </div>
+        </div>
     </div>
     <div class="view-content">
         <ng-content></ng-content>
