--- a/src/shgrid/grid-column.scss
+++ b/src/shgrid/grid-column.scss
@@ -18,6 +18,9 @@
     height: 50px;
     line-height: 50px;
     padding-left: 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     &.action-cell {
       display: grid;
