--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 
+@import "./theme.scss";
 @import "../node_modules/font-awesome/css/font-awesome.css";
 
 /* You can add global styles to this file, and also import other style files */
@@ -9,3 +10,20 @@ body {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.sh-btn {
+    text-align: center;
+    box-shadow: 1px 1px 1px;
+    width: 100%;
+    height: 100%;
+    margin:auto;
+    align-items: center;
+    display: grid;
+    cursor: pointer;
+
+    &:hover {
+        font-weight: bold;
+        border-bottom: 1px solid $theme-dark-primary;
+    }
+
+}
