--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,4 +1,6 @@
 $base-color: #f4f4f4;
 $theme-primary: #dcd0d0;
-$theme-secondary: rgba(192,178,131,0.5);
+$theme-secondary: rgb(192,178,131);
+$theme-a-secondary: rgba(192,178,131,0.1);
 $theme-dark-primary: #373737;
+$theme-a-dark-primary: rgba(55,55,55,0.35);
