--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,3 +1,5 @@
+@import '../../../theme.scss';
+
 .sidebar {
   width: 100%;
   height: 100%;
@@ -22,10 +24,10 @@
 
 
       &.selected {
-        border-left: 7px solid blue;
+        border-left: 7px solid $theme-dark-primary;
         padding-left: 8px;
         font-weight: bold;
-        background-color: rgba(0,0,255,0.05);
+        background-color: $theme-a-dark-primary;
       }
 
       &:hover {
