loading, profiles, assignments view

--- a/src/app/components/assignments/assignments.component.html
+++ b/src/app/components/assignments/assignments.component.html
@@ -1,7 +1,12 @@
 <div class="sh-assignments">
   <sh-view title="Assignments">
     <div viewContent>
-      Hello;
+      <div class="assignemnt"> 
+        <div class="assignment-desc"><input /></div>
+        <div class="assignment-type">Room</div>
+        <div class="assignment-profession">Senior</div>
+        <div class="assignment-importance">Required</div>
+      </div>
     </div>
   </sh-view>
 </div>
