--- a/src/shgrid/grid-actions-column/grid-actions-column.component.html
+++ b/src/shgrid/grid-actions-column/grid-actions-column.component.html
@@ -1,6 +1,6 @@
 <div class="sh-grid-column action-column">
   <div class="sh-grid-col-header sh-grid-cell">{{columnSource.header.text}}</div>
   <div class="sh-grid-cell action-cell" *ngFor="let cellInfo of columnSource.cellInfos;let i = index">
-    <button *ngFor="let action of cellInfo.actions" (click)="action.action(i)" >{{action.icon}}</button>
+    <div class="action-button" *ngFor="let action of cellInfo.actions" (click)="action.action(i)" ><fa [name]="action.icon"></fa> </div>
   </div>
 </div>
