--- a/src/app/components/dropdown/dropdown.component.scss
+++ b/src/app/components/dropdown/dropdown.component.scss
@@ -3,7 +3,7 @@
     .dropdown-content {
         min-height: 100px;
         max-height: 250px;
-        width: calc(100% - 30px);
+        width: 100%;
         position: absolute;
         background-color: white;
         z-index: 1000;
