--- a/src/app/components/assignments/assignments.component.html
+++ b/src/app/components/assignments/assignments.component.html
@@ -15,14 +15,13 @@
             <sh-dropdown [options]="days" [(selectedOption)]="selectedDay"></sh-dropdown>
           </div>
         </div>
-        <div class="assignment-profession assignment-property">
+        <div class="assignment-profession assignment-property" *ngIf="selectedAssignmentType && selectedAssignmentType.id == 'Room'">
             <div class="title">Profession:</div>
             <sh-dropdown [options]="tags" [(selectedOption)]="selectedTag"></sh-dropdown>
-
-            <div class="type-properties-container" *ngIf="selectedAssignmentType && selectedAssignmentType.id == 'Permanent'">
-                <div class="title">Profile:</div>
-              <sh-dropdown [options]="profiles" [(selectedOption)]="selectedProfile"></sh-dropdown>
-            </div>
+        </div>
+        <div class="assignment-profession assignment-property" *ngIf="selectedAssignmentType && selectedAssignmentType.id == 'Permanent'">
+            <div class="title">Profile:</div>
+            <sh-dropdown [options]="profiles" [(selectedOption)]="selectedProfile"></sh-dropdown>
         </div>
         <div class="assignment-importance assignment-property">
           <div class="title">Importance:</div>
