--- a/src/app/components/assignments/assignments.component.scss
+++ b/src/app/components/assignments/assignments.component.scss
@@ -1,4 +1,9 @@
 .sh-assignments {
+    .assignments-list {
+        height: 100%;
+        margin-top: 40px;
+    }
+
     .assignemnt {
         display: flex;
         flex-direction: column;
