--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,29 @@
-<div>Home</div>
+<div class="sh-home">
+    <div class="info-and-news">
+        Info and news
+    </div>
+    <div class="weekly-schedule">
+        <div class="title">
+            Weekly Schedule : 25 Aug - 31 Aug
+        </div>
+        <div class="schedule">
+            <div class="column room">
+                <div class="column-title">
+                    Rooms
+                </div>
+                <div class="column-content room-title" *ngFor="let room of this.rooms">
+                    {{room.name}}
+                </div>
+            </div>
+            <div class="day column" *ngFor="let day of this.days" [ngClass]="{'today' : this.weeklySchedule.days[day].isToday}">
+                <div class="column-title day-title">
+                    <div class="day-name">{{day}}</div>
+                    <div class="day-date">({{this.weeklySchedule.days[day].dateString}})</div>
+                </div>
+                <div class="column-content roomPlaceHolder" *ngFor="let rommPlaceholder of this.rooms">
+                    --
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
