--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -21,18 +21,23 @@
       text-decoration: none;
       color: black;
       font-size: 18px;
-
+      cursor: pointer;
 
       &.selected {
-        border-left: 7px solid $theme-dark-primary;
+        border-left: 7px solid $theme-secondary;
         padding-left: 8px;
         font-weight: bold;
-        background-color: $theme-a-dark-primary;
+        background-color: $theme-a-secondary;
+
+        &:hover {
+          border-left: 7px solid $theme-secondary;
+          background-color: $theme-a-dark-primary;
+        }
       }
 
       &:hover {
         background-color: #f5f5f5;
-        cursor: pointer;
+        border-left: 7px solid $theme-secondary;
       }
     }
   }
