--- a/src/app/components/view/view.component.scss
+++ b/src/app/components/view/view.component.scss
@@ -1,3 +1,5 @@
+@import "../../../theme";
+
 .view {
     width: 100%;
     height: 100%;
@@ -9,7 +11,7 @@
 
     .view-header{
         grid-row: 1;
-        background-color: rgba(0,0,255,0.05);
+        background-color: $theme-secondary;
         width: calc(100% - 100px);
         height: 150px;
         display: flex;
@@ -27,10 +29,10 @@
     }
 
     .view-content {
-        margin: -15px auto 0 auto;
+        margin: 0 auto 0 auto;
         width: 1200px;
         grid-row: 2;
-        height: calc(100vh - 135px);
+        height: calc(100vh - 150px);
         overflow: auto;
     }
 }
