Assignments -> Conditions naming convention

--- a/src/app/components/conditions/conditions.component.scss
+++ b/src/app/components/conditions/conditions.component.scss
@@ -1,5 +1,5 @@
-.sh-assignments {
-    .assignments-list {
+.sh-conditions {
+    .conditions-list {
         height: 100%;
         margin-top: 40px;
     }
@@ -9,7 +9,7 @@
         flex-direction: column;
         align-items: flex-start;
         
-        .assignment-property {
+        .condition-property {
             display: flex;
             align-items: center;
             width: 100%;
