--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,71 +1,53 @@
 .sh-home {
-  display: flex;
-  flex-direction: column;
-  height:100%;
-  padding-left: 10px;
 
-  .info-and-news {
-    flex:2;
-  }
+  .schedule {
+    display: grid;
+    grid-template-columns: repeat(8, 150px);
+    grid-auto-flow: column;
+    background-color: white;
+    height: 100%;
 
-  .weekly-schedule {
-    flex: 8;
-
-    .title {
-      font-size: 20px;
-      font-weight: 400;
-      display: flex;
-      height: 5%;
-    }
-
-    .schedule {
+    .column {
+      border-right: 1px solid black;
       display: grid;
-      grid-template-columns: [first] auto;
-      grid-auto-flow: column;
-      background-color: white;
-      height: 95%;
+      grid-template-rows: [first] 40px auto;
 
-      .column {
-        border-right: 1px solid black;
-        display: grid;
-        grid-template-rows: [first] 40px auto;
-
-        .column-title {
-          font-weight: 500;
-          text-align: center;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-        }
-
-        .column-content {
-          align-self: center;
-        }
-      }
-
-      .day {
-        border-right: 1px solid black;
+      .column-title {
+        font-weight: 500;
         text-align: center;
-        display: grid;
-
-        &.today {
-          background-color:#e1f1f1;
-        }
-
-        .day-title {
-          .day-date {
-            font-size: 12px;
-            font-weight: normal;
-            margin-top: -3px;
-          }
-        }
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
       }
 
-      .room {
-        .room-title {
-          text-align: center;
+      .column-content {
+        align-self: center;
+      }
+    }
+
+    .day {
+      border-right: 1px solid black;
+      text-align: center;
+      display: grid;
+
+      &.today {
+        background-color:#e1f1f1;
+      }
+
+      .day-title {
+        .day-date {
+          font-size: 12px;
+          font-weight: normal;
+          margin-top: -3px;
         }
       }
     }
+
+    .room {
+      .room-title {
+        text-align: center;
+      }
+    }
   }
+
 }
