--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,53 +1,63 @@
 .sh-home {
-
   .schedule {
-    display: grid;
-    grid-template-columns: repeat(8, 150px);
-    grid-auto-flow: column;
-    background-color: white;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
 
-    .column {
-      border-right: 1px solid black;
-      display: grid;
-      grid-template-rows: [first] 40px auto;
+    .row {
+      display: flex;
+      justify-content: space-around;
+      height: 75px;
+      border-bottom: 1px solid lightgray;
 
-      .column-title {
+      &.room {
+        height: 120px;
+      }
+
+      .title {
+        flex: 1;
+        line-height: 75px;
+        font-size: 20px;
+      }
+
+      .room-name {
+        line-height: 120px;
+
+        font-size: 24px;
         font-weight: 500;
-        text-align: center;
+      }
+
+      .cell {
         display: flex;
+        flex: 1;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-around;
       }
 
-      .column-content {
-        align-self: center;
-      }
-    }
+      .daily-assignments {
+        .assignment {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
 
-    .day {
-      border-right: 1px solid black;
-      text-align: center;
-      display: grid;
+          .assignment-text {
+            margin-left: 5px;
+          }
 
-      &.today {
-        background-color:#e1f1f1;
-      }
+          .nice-to-have {
+            background-color: yellow;
+            padding: 5px;
+            color: black;
+            font-weight: bold;
+          }
 
-      .day-title {
-        .day-date {
-          font-size: 12px;
-          font-weight: normal;
-          margin-top: -3px;
+          .required {
+            background-color: red;
+            padding: 5px;
+            color: white;
+            font-weight: bold;
+          }
         }
       }
     }
-
-    .room {
-      .room-title {
-        text-align: center;
-      }
-    }
   }
-
 }
