Working! Fix view

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="sh-home">
-    <sh-view titleText="'Weekly Schedule : 25 Aug - 31 Aug'">
+    <sh-view [titleText]="title">
         <div class="schedule" viewContent>
             <div class="row">
                 <div class="title">
