--- a/src/app/components/profiles/edit/profile.edit.component.html
+++ b/src/app/components/profiles/edit/profile.edit.component.html
@@ -13,7 +13,7 @@
                 <div class="profile-main-info">
                     <div class="info">
                         <span class="property">Name :  </span>
-                        <input [value]="newProfile.name" (change)="profileNameChanged($event)"/>
+                        <input [value]="modifiedProfile.name" (change)="profileNameChanged($event)"/>
                     </div>
                     <div class="professions">
                         <div class="title">Professions</div>
@@ -31,11 +31,37 @@
                             </div>
                         </div>
                     </div>
+
+                </div>
+                <div class="absences">
+                    <div>
+                        <span>Start Date</span>
+                        <mat-form-field>
+                            <input matInput [matDatepicker]="startDatePicker" placeholder="Absence start date" (dateChange)="this.startDateChanged($event)" disabled>
+                            <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+                            <mat-datepicker touchUi #startDatePicker disabled="false"></mat-datepicker>
+                        </mat-form-field>
+                    </div>
+
+                    <div>
+                        <span>End Date</span>
+                        <mat-form-field>
+                            <input matInput [matDatepicker]="endDatePicker" placeholder="Absence end date" [min]="selectedStartDate" (dateChange)="this.endDateChanged($event)" disabled>
+                            <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+                            <mat-datepicker touchUi #endDatePicker disabled="false"></mat-datepicker>
+                        </mat-form-field>
+                    </div>
+                    <div class="sh-btn" style="height: 25px;width: 150px;" (click)="submitAbsence()">
+                        Submit Absence
+                    </div>
+                    <div>
+                        Next Absence : {{this.nextAbsence}}
+                    </div>
                 </div>
             </div>
-            <!-- <div class="profile-secondary-info">
-                Weekly Schedule
-            </div> -->
+            <div class="profile-secondary-info">
+                <div></div>
+            </div>
         </div>
     </sh-view>
 </div>
