--- a/src/app/components/profiles/edit/profile.edit.component.scss
+++ b/src/app/components/profiles/edit/profile.edit.component.scss
@@ -3,29 +3,28 @@
 }
 
 .profile-edit-grid {
-    display: grid;
-    grid-auto-rows: 50% auto;
+    display: flex;
+    flex-direction: column;
     height: 100%;
     width: 100%;
 
     .profile-info {
-        display: grid;
-        grid-auto-flow: column;
-        grid-auto-columns: 30% 70%;
+        display: flex;
+        flex: 1;
+        justify-content: flex-start;
 
         .profile-image {
-            display: grid;
-            
             justify-content: center;
+            margin-right: 50px;
         }
 
         .profile-main-info {
-            display: grid;
-            grid-auto-flow: column;
-            grid-auto-columns: 50% 50%;
+            display: flex;
+            flex-direction: column;
+            width: 350px;
 
             .info {
-                padding-left: 10px;
+                margin-bottom: 20px;
 
                 .property {
                     font-size: 18px;
@@ -58,5 +57,7 @@
 
     .profile-secondary-info {
         border:1px solid black;
+        display: flex;
+        flex:2;
     }
 }
