--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -5,58 +5,47 @@
 
     .row {
       display: flex;
-      justify-content: space-around;
-      height: 75px;
-      border-bottom: 1px solid lightgray;
+      border-bottom: 2px solid lightgray;
 
-      &.room {
-        height: 120px;
+      &.title-row {
+        height: 75px;
       }
 
       .title {
-        flex: 1;
-        line-height: 75px;
         font-size: 20px;
-      }
-
-      .room-name {
-        line-height: 120px;
-
-        font-size: 18px;
-        font-weight: 500;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
       }
 
       .cell {
-        display: flex;
         flex: 1;
-        flex-direction: column;
-        justify-content: space-around;
-      }
 
-      .daily-assignments {
-        .assignment {
+        &.content {
+          height: 90px;
           display: flex;
-          justify-content: flex-start;
+          flex-direction: column;
+          justify-content: center;
           align-items: center;
-
-          .assignment-text {
-            margin-left: 5px;
-          }
-
-          .nice-to-have {
-            background-color: yellow;
-            padding: 5px;
-            color: black;
-            font-weight: bold;
-          }
-
-          .required {
-            background-color: red;
-            padding: 5px;
-            color: white;
-            font-weight: bold;
-          }
         }
+      }
+    }
+
+    .show-absent {
+      font-size: 14px;
+      cursor: pointer;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+    .assignment-text {
+      cursor: pointer;
+      padding:5px;
+      &:hover {
+        font-weight: bold;
       }
     }
   }
