--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,7 +24,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
     &:hover {
         font-weight: bold;
-        border-bottom: 1px solid $theme-dark-primary;
+        border-bottom: 1px solid $theme-secondary;
     }
 
 }
