--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -5,9 +5,16 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  background-color: $theme-secondary;
 
   .sidebar-header {
     flex: 1;
+    background-color: rgba(255,255,255, 0.35);
+    color:white;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    font-size: 16px;
   }
 
   .sidebar-body {
@@ -22,22 +29,23 @@
       color: black;
       font-size: 18px;
       cursor: pointer;
+      color:white;
 
       &.selected {
-        border-left: 7px solid $theme-secondary;
+        border-left: 7px solid $theme-primary;
         padding-left: 8px;
-        font-weight: bold;
-        background-color: $theme-a-secondary;
+        font-weight: 500;
+        background-color: rgba(255,255,255, 0.35);
 
         &:hover {
-          border-left: 7px solid $theme-secondary;
-          background-color: $theme-a-dark-primary;
+          border-left: 7px solid $theme-primary;
+          background-color: rgba(255,255,255, 0.35);
         }
       }
 
       &:hover {
-        background-color: #f5f5f5;
-        border-left: 7px solid $theme-secondary;
+        background-color: rgba(255,255,255, 0.35);
+        border-left: 7px solid rgba(255,255,255, 0.35);
       }
     }
   }
