--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,6 +1,3 @@
-$base-color: #f5f5f5;
-$theme-primary: #bab2b5;
-$theme-secondary: #edc7b7;
-$theme-a-secondary: rgba(192,178,131,0.2);
-$theme-dark-primary: #373737;
-$theme-a-dark-primary: rgba(55,55,55,0.35);
+$theme-primary: #f5f5f5;
+$theme-secondary: #1976d2;
+$theme-a-secondary: rgba(25, 118, 210, 0.35);
